添加swiper组件, 用axios获取轮播图数据,加入阿里图标

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>youzan</title>
+    <script src="//at.alicdn.com/t/font_939512_qhr7f3nq3a.js"></script>
   </head>
   <body>
     <noscript>
